# LibsAndAlgoProblemsCpp

./: .gitignore  CMakeLists.txt  compile.bat  status.md
.github/workflows/: tests.yml
prj.codeforces/: 0001a.cpp  0004a.cpp  0011A.cpp  0011a.cpp  0041a.cpp  0136b.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0339b.cpp  0731a.cpp  0978a.cpp  0978b.cpp  1151a.cpp  1330a.cpp  1352a.cpp  1404a.cpp  1488a.cpp  1512b.cpp  1512c.cpp  1559.cpp  1559a.cpp  1649.cpp  1649a.cpp  1669d.cpp  1670b.cpp  1690d.cpp  1717B.cpp  1717b.cpp  1721b.cpp  1743.cpp  1743b.cpp  1744.cpp  1872a.cpp  1873c.cpp  1873d.cpp  978b.cpp  CMakeLists.txt
prj.lab/: complex.cpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/dynarray/: CMakeLists.txt
prj.lab/rational/: rational.cpp  rational.hpp
prj.test/: CMakeLists.txt  test_complex.cpp  test_dynarr.cpp  test_rational.cpp
