add_executable(0001a 0001a.cpp)
add_executable(0004a 0004a.cpp)
add_executable(0011a 0011a.cpp)
add_executable(0041a 0041a.cpp)
add_executable(0136b 0136b.cpp)
add_executable(0263a 0263a.cpp)
add_executable(0271a 0271a.cpp)
add_executable(0276a 0276a.cpp)
add_executable(0339b 0339b.cpp)
add_executable(0731a 0731a.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)
add_executable(1151a 1151a.cpp)
add_executable(1330a 1330a.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1404a 1404a.cpp)
add_executable(1488a 1488a.cpp)
add_executable(1512b 1512b.cpp)
add_executable(1512c 1512c.cpp)
add_executable(1559a 1559a.cpp)
add_executable(1649a 1649a.cpp)
add_executable(1670b 1670b.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1743b 1743b.cpp)
add_executable(1872a 1872a.cpp)
add_executable(1873c 1873c.cpp)
add_executable(1873d 1873d.cpp)